update to 1.21, small code clean-up