@@ -73,7 +73,7 @@ public final class BrowseOwnedClaims implements Consumer<ClaimPanel> {
 
     @Override
     public void accept(final @NotNull ClaimPanel cPanel) {
-        final Player viewer = (Player) cPanel.getInventory().getViewers().get(0);
+        final Player viewer = (Player) cPanel.getInventory().getViewers().getFirst();
         // ...
         this.claims = cPanel.getManager().getClaimPlayer(viewer).getClaims().stream()
                 .sorted((s1, s2) -> s1.getDisplayName().compareToIgnoreCase(s2.getDisplayName()))
@@ -134,7 +134,7 @@ public final class BrowseOwnedClaims implements Consumer<ClaimPanel> {
                                 // Displaying particles. NOTE: This can expose vanished players.
                                 if (PluginConfig.CLAIM_SETTINGS_TELEPORT_EFFECTS != null) {
                                     PluginConfig.CLAIM_SETTINGS_TELEPORT_EFFECTS.forEach(it -> {
-                                        location.getWorld().spawnParticle(it.getParticle(), viewer.getLocation().add(0, (viewer.getHeight() / 2), 0), it.getAmount(), it.getOffestX(), it.getOffsetY(), it.getOffsetZ(), it.getSpeed());
+                                        location.getWorld().spawnParticle(it.getParticle(), viewer.getLocation().add(0, (viewer.getHeight() / 2), 0), it.getAmount(), it.getOffsetX(), it.getOffsetY(), it.getOffsetZ(), it.getSpeed());
                                     });
                                 }
                                 // Playing sounds. NOTE: This can expose vanished players.
@@ -188,7 +188,7 @@ public final class BrowseOwnedClaims implements Consumer<ClaimPanel> {
                             // Displaying particles. NOTE: This can expose vanished players.
                             if (PluginConfig.WAYPOINT_SETTINGS_TELEPORT_EFFECTS != null) {
                                 PluginConfig.WAYPOINT_SETTINGS_TELEPORT_EFFECTS.forEach(it -> {
-                                    current.getWorld().spawnParticle(it.getParticle(), viewer.getLocation().add(0, (viewer.getHeight() / 2), 0), it.getAmount(), it.getOffestX(), it.getOffsetY(), it.getOffsetZ(), it.getSpeed());
+                                    current.getWorld().spawnParticle(it.getParticle(), viewer.getLocation().add(0, (viewer.getHeight() / 2), 0), it.getAmount(), it.getOffsetX(), it.getOffsetY(), it.getOffsetZ(), it.getSpeed());
                                 });
                             }
                             // Playing sounds. NOTE: This can expose vanished players.
@@ -198,7 +198,7 @@ public final class BrowseOwnedClaims implements Consumer<ClaimPanel> {
                                 current.getWorld().playSound(PluginConfig.WAYPOINT_SETTINGS_TELEPORT_SOUNDS_IN, current.x(), current.y(), current.z());
                         }
                     });
-                        // Othwerwise, sending error message to the sender.
+                    // Otherwise, sending error message to the sender.
                     else Message.of(PluginLocale.RANDOM_TELEPORT_FAILURE_NOT_FOUND).sendActionBar(viewer);
 
                 });
@@ -217,7 +217,7 @@ public final class BrowseOwnedClaims implements Consumer<ClaimPanel> {
                     // Displaying particles. NOTE: This can expose vanished players.
                     if (PluginConfig.WAYPOINT_SETTINGS_TELEPORT_EFFECTS != null) {
                         PluginConfig.WAYPOINT_SETTINGS_TELEPORT_EFFECTS.forEach(it -> {
-                            current.getWorld().spawnParticle(it.getParticle(), viewer.getLocation().add(0, (viewer.getHeight() / 2), 0), it.getAmount(), it.getOffestX(), it.getOffsetY(), it.getOffsetZ(), it.getSpeed());
+                            current.getWorld().spawnParticle(it.getParticle(), viewer.getLocation().add(0, (viewer.getHeight() / 2), 0), it.getAmount(), it.getOffsetX(), it.getOffsetY(), it.getOffsetZ(), it.getSpeed());
                         });
                     }
                     // Playing sounds. NOTE: This can expose vanished players.
